--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Comprehensive Rust 🦀\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2023-03-12 14:30+0700\n"
+"PO-Revision-Date: 2023-03-12 23:45+0700\n"
 "Last-Translator: Eyem <hndrbrm@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "Language: id\n"
@@ -4505,13 +4505,15 @@ msgstr ""
 
 #: src/ownership/borrowing.md:1
 msgid "# Borrowing"
-msgstr ""
+msgstr "# Peminjaman (Borrowing)"
 
 #: src/ownership/borrowing.md:3
 msgid ""
 "Instead of transferring ownership when calling a function, you can let a\n"
 "function _borrow_ the value:"
 msgstr ""
+"Ketimbang memindahkan kepemilikan saat memanggil fungsi, anda dapat menjadikan fungsi untuk "
+"meminjam nilai:"
 
 #: src/ownership/borrowing.md:6 src/ownership/lifetimes-function-calls.md:5
 msgid ""
@@ -4543,6 +4545,8 @@ msgid ""
 "* The `add` function _borrows_ two points and returns a new point.\n"
 "* The caller retains ownership of the inputs."
 msgstr ""
+"* Fungsi `add` _meminjam_ dua point dan mengembalikan point baru.\n"
+"* Pemanggil fungsi tetap memiliki kepemilikan dari parameter input."
 
 #: src/ownership/borrowing.md:27
 msgid ""
@@ -4552,6 +4556,11 @@ msgid ""
 "\"DEBUG\" optimization level, the addresses should change, while the stay the same when changing "
 "to the \"RELEASE\" setting:"
 msgstr ""
+"Catatan pada stack kembalian:\n"
+"* Tunjukkan bahwa hasil kembalian dari `add` itu sederhana karena kompiler bisa mengeliminasi "
+"operasi penyalinan. Ganti kode diatas untuk mencetak alamat stack dan jalankan di [Playground]. "
+"Pada level optimisasi “DEBUG”, alamat akan berganti, tetapi akan tetap sama ketika menggunakan "
+"“RELEASE”:"
 
 #: src/ownership/borrowing.md:30
 msgid ""
@@ -4584,6 +4593,18 @@ msgid ""
 "have side effects. In Rust, this is not an issue at all. If RVO did not happen, Rust will always "
 "performs a simple and efficient `memcpy` copy."
 msgstr ""
+"  fn main() {\n"
+"      let p1 = Point(3, 4);\n"
+"      let p2 = Point(10, 20);\n"
+"      let p3 = add(&p1, &p2);\n"
+"      println!(“&p3.0: {:p}”, &p3.0);\n"
+"      println!(“{p1:?} + {p2:?} = {p3:?}”);\n"
+"  }\n"
+"  ```\n"
+"* Kompiler Rust mampu melakukan optimasi pada hasil kembalian (RVO - Return Value Optimization).\n"
+"* Pada C++, peniadaan salinan harus didefinisikan terlebih dahulu sebab memungkinkan terjadinya "
+"efek samping pada konstruktor. Pada Rust, hal ini tidak menjadi issue sama sekali. Jika RVO tidak "
+"ada, Rust akan selalu melakukan penyalinan yg sederhana dan efisien seperti `memcpy`."
 
 #: src/ownership/borrowing.md:53
 msgid "[Playground]: https://play.rust-lang.org/"
